--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -11,9 +11,9 @@
     {% block extra_head %}
     {% endblock %}
 
-
     <!-- bulma cdn -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
+      integrity="sha384-HmYpsz2Aa9Gh3JlkCoh8kUJ2mUKJKTnkyC2Lzt8aLzpPOpnDe8KpFE2xNiBpMDou" crossorigin="anonymous">
     <!-- my css -->
     <link rel="stylesheet" type="text/css" href="{% static 'board_app/css/style.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'board_app/css/navbar.css' %}">
