feat: change label fount wight

--- a/board_app/static/board_app/css/style.css
+++ b/board_app/static/board_app/css/style.css
@@ -104,6 +104,12 @@ h2 {
     fill: var(--link-color-hover);
 } */
 
+
+label {
+    font-weight: 400;
+}
+
+
 /* ---------------------------------------------------------------------- */
 /* the post-footer */
 /* ---------------------------------------------------------------------- */
