--- a/board_app/templates/board_app/components/tag_cloud.html
+++ b/board_app/templates/board_app/components/tag_cloud.html
@@ -1,5 +1,5 @@
 <section class="section tag-cloud-section">
-    <h3 class="pb-3">Tags</h3>
+    <h4 class="pb-3">Top 10 Tags</h4>
     {% for tag in tags %}
     <!-- {{ tag.name }} -->
     <div class="tag-container tags">
@@ -8,11 +8,3 @@
     {% endfor %}
 
 </section>
-
-
-<!-- <script>
-    function myFunction() {
-        var element = document.getElementsByClassName("tagwidget");
-        element.classList.add("input");
-    } 
-</script> -->
