--- a/board_app/templates/board_app/add_post.html
+++ b/board_app/templates/board_app/add_post.html
@@ -11,5 +11,16 @@
         {{ form|crispy }}
         <button type="submit" class="button is-success mt-2">Post your Article</button>
     </form>
+
+    <!-- <input name='basic' value='tag1, tag2 autofocus'> -->
+
 </section>
+
+<script>
+    // initialize Tagify
+    var input = document.querySelector('[name=tags]'),
+        // init Tagify script on the above inputs
+        tagify = new Tagify(input, {
+        });
+</script>
 {% endblock content %}
