--- a/board_app/templates/board_app/components/comment_section.html
+++ b/board_app/templates/board_app/components/comment_section.html
@@ -1,36 +1,31 @@
-<div class="section">
-    {% for post in posts %}
-    <div class="post-container post-container-index mb-6">
-        <a class="title-link" href="{{ post.get_absolute_url }}">
-            <h2 class="subtitle is-2 article-title-link">{{ post.title }}
-                <svg class="title-svg" xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24"
-                    transform: ;msFilter:;">
-                    <path d="m11.293 17.293 1.414 1.414L19.414 12l-6.707-6.707-1.414 1.414L15.586 11H6v2h9.586z"></path>
-                </svg>
-            </h2>
-        </a>
-        <h4 class="subtitle">{{ post.subtitle }}</h4>
-        <p> {{ post.content.html|safe}}</p>
-        <div class="post-footer">
-            <p>[Author] {{ post.author }}</p>
-            <p>{{ post.date_posted|date:'d-M-Y H:ia' }}</p>
-            {% for tag in post.tags.all %}
-            <a class="has-text-weight-bold" href="{% url 'tag_post_page' tag.slug %}">
-                <p>#{{ tag.name }}</p>
-            </a>
-            {% endfor %}
-        </div>
-        <div class="">
-            {% if not post.comments.all %}
-            <p class="has-text-grey">No comments yet</p>
-            {% else %}
-            <p class="has-text-grey">{{ post.comments.count }} comment{{ post.comments.count|pluralize }}</p>
-            {% endif %}
+<!-- comment section -->
+<div>
+    {% if not post.comments.all %}
+    <p class="has-text-grey">No comments yet...</p>
+    {% else %}
+    <p class="has-text-grey">{{ post.comments.count }} comment{{ post.comments.count|pluralize }}</p>
+    {% endif %}
+    <a class="button is-success my-5" href="{% url 'add_comment' post.pk %}">Add a comment</a>
+
+    {% if not post.comments.all %}
+    {% else %}
+    <h3 class="subtitle is-3">Latest Comments</h3>
+    {% endif %}
+
+    {% for comment in post.comments.all %}
+    <div class="pb-5">
+        <!-- <h4 class="subtitle is-4 mb-2">{{comment.title}}</h4> -->
+        <p>{{ comment.content }}</p>
+        <!-- <p> {{ post.content.html|safe }}</p> -->
+        <div class="post-footer mt-2">
+            <p>[Author] {{ comment.author }}</p>
+            <p>{{ comment.date_posted|date:'d-M-Y g:ia' }}</p>
         </div>
     </div>
     {% endfor %}
+
     {# pagination #}
-    <div class="pt-6 px-6">
+    <div class="pt-6">
         {% if is_paginated %}
         <nav class="pagination is-centered" role="navigation" aria-label="pagination">
             {% if page_obj.has_previous %}
@@ -56,7 +51,8 @@
                     page</a>
                 {% else %}
             </ul>
-            <a class="pagination-next is-disabled" disabled href="?page={{ books.paginator.num_pages }}">Last page</a>
+            <a class="pagination-next is-disabled" disabled href="?page={{ books.paginator.num_pages }}">Last
+                page</a>
             {% endif %}
         </nav>
         {% endif %}
