--- a/board_app/templates/board_app/components/navbar.html
+++ b/board_app/templates/board_app/components/navbar.html
@@ -63,7 +63,8 @@
                     </div>
                     <div class="navbar-dropdown is-boxed is-right">
                         {% if user.is_authenticated %}
-                        <a class="navbar-item" href="{% url 'profile' %}">
+
+                        <a class="navbar-item" href="{% url 'profile' request.user %}">
                             Profile
                         </a>
                         <hr class="navbar-divider">
