--- a/board_app/templates/board_app/components/post_list_elements.html
+++ b/board_app/templates/board_app/components/post_list_elements.html
@@ -29,3 +29,34 @@
     </div>
 </div>
 {% endfor %}
+{# pagination #}
+<div class="pt-6">
+    {% if is_paginated %}
+    <nav class="pagination is-centered" role="navigation" aria-label="pagination">
+        {% if page_obj.has_previous %}
+        <a class="pagination-previous button is-dark is-outlined" href="?page=1">First Page</a>
+        <ul class="pagination-list">
+            <li><span class="pagination-ellipsis">&hellip;</span></li>
+            {% else %}
+            <a class="pagination-previous is-disabled" disabled href="?page=1">First Page</a>
+            <ul class="pagination-list">
+                {% endif %}
+                {% for num in page_obj.paginator.page_range %}
+                {% if page_obj.number == num %}
+                <li><a class="pagination-link button is-dark" href="?page={{ num }}">{{ num }}</a></li>
+                {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+                <li><a class="pagination-link" href="?page={{ num }}">{{ num }}</a></li>
+                {% endif %}
+                {% endfor %}
+                {% if page_obj.has_next %}
+                <li><span class="pagination-ellipsis">&hellip;</span></li>
+            </ul>
+            <a class="pagination-next button is-dark is-outlined" href="?page={{ page_obj.paginator.num_pages }}">Last
+                page</a>
+            {% else %}
+        </ul>
+        <a class="pagination-next is-disabled" disabled href="?page={{ books.paginator.num_pages }}">Last page</a>
+        {% endif %}
+    </nav>
+    {% endif %}
+</div>
