--- a/board_app/templates/board_app/tag_page.html
+++ b/board_app/templates/board_app/tag_page.html
@@ -5,7 +5,7 @@
 {% block content %}
 <section>
     <section class="section pb-0">
-        <h2 class="subtitle is-2">#{{ tag|title }}</h2>
+        <h2 class="subtitle is-2"><span class="hashtag">#</span>{{ tag|title }}</h2>
     </section>
     {% include 'board_app/components/post_list_elements_tag.html' %}
 </section>
