--- a/profile_app/templates/profile_app/profile_page.html
+++ b/profile_app/templates/profile_app/profile_page.html
@@ -1,22 +1,66 @@
 {% extends 'board_app/base.html' %}
 
 {% block content %}
-<section class="section">
-    <h3 class="subtitle is-3">Profile page of {{user.username}}</h3>
-    <p>{{ user.bio }}</p>
-    <p>{{ user.username.post }}</p>
+<section class="section is-narror">
+    <div class="has-text-centered has-text-left-tablet">
+        <h2 class="subtitle is-2 mb-6">My Profile</h2>
+    </div>
 
-    <div class="columns">
-        <div class="column">
-            <figure class="image is-128x128">
+    <div class="columns mb-6">
+        <div class="column is-4">
+            <figure class="image container is-128x128 mb-4">
                 <img class="is-rounded" src="{{ user.profile.image.url }}" height="200" alt="">
             </figure>
         </div>
-        <div class="column">
-            <p>email: {{ user.email }}</p>
+        <div class="column is-6">
+            <p class="has-text-grey">Username: {{user.username}}</p>
+            <p class="has-text-grey">Email: {{ user.email }}</p>
 
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus ipsa possimus velit!</p>
+            <!-- <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus ipsa possimus velit!</p> -->
+            {% if user.profile.bio %}
+            <div class="mt-4 p-4 card">
+                <h4 class="subtitle is-6 mb-2">BIO:</h4>
+                <p class="is-size-6">{{ user.profile.bio }}</p>
+            </div>
+            {% endif %}
+            <!-- <p>{{ user.username.post }}</p> -->
         </div>
     </div>
+    <p class="mt-3">You have <span class="fw-bold text-secondary">{{ page_obj.paginator.count }}</span>
+        posts
+    </p>
+
+    {% for post in posts %}
+    <div class="post-container post-container-index mb-6">
+        <a class="title-link" href="{{ post.get_absolute_url }}">
+            <h2 class="subtitle is-2 article-title-link">{{ post.title }}
+                <svg class="title-svg" xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24"
+                    transform: ;msFilter:;">
+                    <path d="m11.293 17.293 1.414 1.414L19.414 12l-6.707-6.707-1.414 1.414L15.586 11H6v2h9.586z"></path>
+                </svg>
+            </h2>
+        </a>
+
+        <h4 class="subtitle">{{ post.subtitle }}</h4>
+        <p> {{ post.content.html|safe}}</p>
+        <div class="post-footer">
+            <p>[Author] {{ post.author }}</p>
+            <p>{{ post.date_posted|date:'d-M-Y g:ia' }}</p>
+            {% for tag in post.tags.all %}
+            <a class="has-text-weight-bold" href="{% url 'tag_post_page' tag.slug %}">
+                <p>#{{ tag.name }}</p>
+            </a>
+            {% endfor %}
+        </div>
+        <div class="">
+            {% if not post.comments.all %}
+            <p class="has-text-grey">No comments yet</p>
+            {% else %}
+            <p class="has-text-grey">{{ post.comments.count }} comment{{ post.comments.count|pluralize }}</p>
+            {% endif %}
+        </div>
+    </div>
+    {% endfor %}
+
 </section>
 {% endblock content %}
