--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -7,19 +7,21 @@
 
 {% block content %}
 <section class="section form-centered">
-    <h1>{% trans "Password Reset" %}</h1>
+    <h3 class="subtitle is-3">{% trans "Password Reset" %}</h3>
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
 
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}
+    <p class="is-size-6">
+        {% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}
     </p>
 
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset mt-4">
         {% csrf_token %}
         {{ form|crispy }}
-        <input class="button is-success" type="submit" value="{% trans 'Reset My Password' %}" />
+        <input class="button is-success mt-4" type="submit" value="{% trans 'Reset My Password' %}" />
     </form>
+    <p class="pt-6">{% blocktrans %}Please contact us if you have any trouble resetting your
+        password.{% endblocktrans %}</p>
 </section>
-<p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
 {% endblock %}
