--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -7,17 +7,18 @@
 {% block content %}
 <section class="section form-centered">
 
-  <h1>{% trans "Sign Up" %}</h1>
+  <h3 class="subtitle is-3">{% trans "Sign Up" %}</h3>
 
-  <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+  <p class="is-size-6">{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign
+      in</a>.{% endblocktrans %}</p>
 
-  <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+  <form class="signup mt-4" id="signup_form" method="post" action="{% url 'account_signup' %}">
     {% csrf_token %}
     {{ form|crispy }}
     {% if redirect_field_value %}
     <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
     {% endif %}
-    <button class="button is-success" type="submit">{% trans "Sign Up" %} &raquo;</button>
+    <button class="button is-success mt-4" type="submit">{% trans "Sign Up" %} &raquo;</button>
   </form>
 </section>
 {% endblock %}
