--- a/board_app/templates/board_app/components/navbar.html
+++ b/board_app/templates/board_app/components/navbar.html
@@ -26,35 +26,35 @@
 
             <div class="navbar-end">
                 <div class="navbar-item">
-                    <div class="field is-grouped">
-                        <p class="control">
-                            <a class="bd-tw-button button" data-social-network="Twitter" data-social-action="tweet"
-                                data-social-target="https://bulma.io" target="_blank"
-                                href="https://twitter.com/intent/tweet?text=Bulma: a modern CSS framework based on Flexbox&amp;hashtags=bulmaio&amp;url=https://bulma.io&amp;via=jgthms">
-                                <span class="icon">
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22">
-                                        <path fill="none" d="M0 0h24v24H0z" />
-                                        <path
-                                            d="M20 22H4a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1h16a1 1 0 0 1 1 1v18a1 1 0 0 1-1 1zm-1-2V4H5v16h14zM7 6h4v4H7V6zm0 6h10v2H7v-2zm0 4h10v2H7v-2zm6-9h4v2h-4V7z" />
-                                    </svg>
-                                </span>
-                                <span>
-                                    Featured Articles
-                                </span>
-                            </a>
-                        </p>
-                        <p class="control">
-                            <a class="button is-dark" href="{% url 'add_post' %}">
-                                <span class="icon white-svg">
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22">
-                                        <path fill="none" d="M0 0h24v24H0z" />
-                                        <path
-                                            d="M20 2a3 3 0 0 1 3 3v2h-2v12a3 3 0 0 1-3 3H4a3 3 0 0 1-3-3v-2h16v2a1 1 0 0 0 .883.993L18 20a1 1 0 0 0 .993-.883L19 19V4H6a1 1 0 0 0-.993.883L5 5v10H3V5a3 3 0 0 1 3-3h14z" />
-                                    </svg>
-                                </span>
-                                <span>Write an Article</span>
-                            </a>
-                        </p>
+                    <div class="field is-grouped navbar-buttons">
+                        <!-- <p class="control"> -->
+                        <a class="button is-fullwidth" data-social-network="Twitter" data-social-action="tweet"
+                            data-social-target="https://bulma.io" target="_blank"
+                            href="https://twitter.com/intent/tweet?text=Bulma: a modern CSS framework based on Flexbox&amp;hashtags=bulmaio&amp;url=https://bulma.io&amp;via=jgthms">
+                            <span class="icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22">
+                                    <path fill="none" d="M0 0h24v24H0z" />
+                                    <path
+                                        d="M20 22H4a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1h16a1 1 0 0 1 1 1v18a1 1 0 0 1-1 1zm-1-2V4H5v16h14zM7 6h4v4H7V6zm0 6h10v2H7v-2zm0 4h10v2H7v-2zm6-9h4v2h-4V7z" />
+                                </svg>
+                            </span>
+                            <span>
+                                Featured Articles
+                            </span>
+                        </a>
+                        <!-- </p> -->
+                        <!-- <p class="control"> -->
+                        <a class="button is-fullwidth is-dark" href="{% url 'add_post' %}">
+                            <span class="icon white-svg">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22">
+                                    <path fill="none" d="M0 0h24v24H0z" />
+                                    <path
+                                        d="M20 2a3 3 0 0 1 3 3v2h-2v12a3 3 0 0 1-3 3H4a3 3 0 0 1-3-3v-2h16v2a1 1 0 0 0 .883.993L18 20a1 1 0 0 0 .993-.883L19 19V4H6a1 1 0 0 0-.993.883L5 5v10H3V5a3 3 0 0 1 3-3h14z" />
+                                </svg>
+                            </span>
+                            <span>Write an Article</span>
+                        </a>
+                        <!-- </p> -->
                     </div>
                 </div>
                 <div class="navbar-item has-dropdown is-hoverable">
