feat: add basic search and hero section to index

--- a/board_app/templates/board_app/index.html
+++ b/board_app/templates/board_app/index.html
@@ -7,7 +7,7 @@
     <div class="mobile-searchbar">
         {% include 'board_app/components/searchbar.html' %}
     </div>
-    <section class="section blog-posts">
+    <section class="blog-posts">
         {% include 'board_app/components/post_list_elements.html' %}
     </section>
 </main>
