--- a/board_app/templates/board_app/post_detail.html
+++ b/board_app/templates/board_app/post_detail.html
@@ -46,11 +46,11 @@
         {% include 'board_app/components/author_post_list_elements.html' %}
         {% sidebar_tag_cloud %}
 
-        {% for post in posts %}
+        <!-- {% for post in posts %}
         <div class="post-container post-container-index mb-5">
             <h2 class="subtitle is-2 article-title-link">{{ post.title }}
             </h2>
         </div>
-        {% endfor %}
+        {% endfor %} -->
 </aside>
 {% endblock content %}
