--- a/board_app/static/board_app/css/style.css
+++ b/board_app/static/board_app/css/style.css
@@ -80,8 +80,10 @@ button {}
 /* ---------------------------------------------------------------------- */
 .hashtag,
 .title-link h2 {
-    color: var(--link-color);
+    color: var(--link-color) !important;
 }
+
+
 
 .title-link .title-svg {
     fill: var(--link-color);
@@ -177,7 +179,6 @@ input #id_tags {
 /* ---------------------------------------------------------------------- */
 /* the tags */
 /* ---------------------------------------------------------------------- */
-
 .tag-container:not(:last-child) {
     display: inline-block;
     padding-right: 1rem;
@@ -259,4 +260,9 @@ input #id_tags {
 
 .tagify__input {
     /* background-color: #e79ddd; */
+}
+
+.title-link * {
+    color: var(--link-color) !important;
+
 }
