--- a/board_app/templates/board_app/components/author_post_list_elements.html
+++ b/board_app/templates/board_app/components/author_post_list_elements.html
@@ -5,7 +5,7 @@
     {% for post in related_items %}
     <div class="post-container post-container-index mb-5">
         <a class="title-link" href="{{ post.get_absolute_url }}">
-            <h4 class="subtitle is-4 article-title-link">{{ post.title }}
+            <h4 class="is-size-4 article-title-link">{{ post.title }}
                 <!-- <svg class="title-svg" xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24"
                     transform: ;msFilter:;">
                     <path d="m11.293 17.293 1.414 1.414L19.414 12l-6.707-6.707-1.414 1.414L15.586 11H6v2h9.586z"></path>
