feat: add search bar to most pages

--- a/board_app/templates/board_app/post_detail.html
+++ b/board_app/templates/board_app/post_detail.html
@@ -3,6 +3,9 @@
 
 {% block content %}
 <main>
+    <div class="mobile-searchbar">
+        {% include 'board_app/components/searchbar.html' %}
+    </div>
     <section class="section">
         <div class="post-container">
             <div>
