--- a/board_app/templates/board_app/tag_page.html
+++ b/board_app/templates/board_app/tag_page.html
@@ -4,13 +4,21 @@
 
 {% block content %}
 <section>
-    <section class="section pb-0">
+    <div class="mobile-searchbar">
+        {% include 'board_app/components/searchbar.html' %}
+    </div>
+    <div class="section pb-0">
         <h2 class="subtitle is-2"><span class="hashtag">#</span>{{ tag|title }}</h2>
-    </section>
+    </div>
     {% include 'board_app/components/post_list_elements_tag.html' %}
 </section>
 <aside class="aside">
-    <div class="aside-posts">
+    <!-- searchbar -->
+    <div class="desktop-searchbar">
+        {% include 'board_app/components/searchbar.html' %}
+    </div>
+    <!-- tags -->
+    <div class=aside-posts">
         {% sidebar_tag_cloud %}
     </div>
 </aside>
