--- a/board_app/static/board_app/css/style.css
+++ b/board_app/static/board_app/css/style.css
@@ -72,6 +72,9 @@ h2 {
     grid-column: 2;
 }
 
+label {
+    text-transform: capitalize !important;
+}
 
 button {}
 
@@ -167,7 +170,6 @@ input #id_tags {
 
 }
 
-
 .desktop-searchbar {
     display: none;
 }
@@ -206,6 +208,11 @@ input #id_tags {
 
     .mobile-searchbar {
         display: none;
+    }
+
+
+    .searchbar-section {
+        padding-top: 3.4rem !important;
     }
 }
 
