--- a/board_app/templates/board_app/base.html
+++ b/board_app/templates/board_app/base.html
@@ -18,7 +18,8 @@
         <!-- jQuery tag -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/tagify/4.17.7/jQuery.tagify.min.js"
             integrity="sha384-ChBnWYns+QdYQmukhCcesOp7wgNTrRfc7WQQXeG54IyaurQ98fIpCi7LzzicBEHO"
-            crossorigin="anonymous"></script> <!-- bulma cdn -->
+            crossorigin="anonymous"></script>
+        <!-- bulma cdn -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
             integrity="sha384-HmYpsz2Aa9Gh3JlkCoh8kUJ2mUKJKTnkyC2Lzt8aLzpPOpnDe8KpFE2xNiBpMDou" crossorigin="anonymous">
         <!-- my css -->
