--- a/staticfiles/board_app/css/style.css
+++ b/staticfiles/board_app/css/style.css
@@ -9,8 +9,8 @@
 }
 
 :root {
-    --is-light: #f7f7f7;
-    --bg-light: #f7f7f7;
+    --is-light: #f5f5f5;
+    --bg-light: #f5f5f5;
     --link-color: #3969c4;
     --link-color-hover: #4a4a4a;
 }
@@ -31,7 +31,7 @@ body {
 
 .main-grid {
     display: grid;
-    grid-template-columns: 1fr minmax(100px, 160ch) 1fr;
+    grid-template-columns: 1fr minmax(100px, 180ch) 1fr;
 }
 
 .sub-grid {
@@ -40,16 +40,22 @@ body {
 
 }
 
+
+.flex {
+    display: flex;
+    align-items: center;
+}
+
 .bg-light {
     background-color: var(--bg-light);
 }
 
-main {
-    /* background-color: #d5d6d6; */
+.room-hero {
+    transition: 160ms;
 }
 
-aside {
-    /* background-color: rgb(207, 207, 216); */
+.room-hero:hover {
+    background-color: #e6e8f3 !important;
 }
 
 h2 {
@@ -72,16 +78,23 @@ h2 {
     grid-column: 2;
 }
 
+label {
+    text-transform: capitalize !important;
+}
 
 button {}
+
+
 
 /* ---------------------------------------------------------------------- */
 /* typeface */
 /* ---------------------------------------------------------------------- */
 .hashtag,
 .title-link h2 {
-    color: var(--link-color);
+    color: var(--link-color) !important;
 }
+
+
 
 .title-link .title-svg {
     fill: var(--link-color);
@@ -103,7 +116,9 @@ button {}
 /* svg:hover {
     fill: var(--link-color-hover);
 } */
-
+.chat-svg-path {
+    color: #be3434 !important;
+}
 
 label {
     font-weight: 400 !important;
@@ -165,7 +180,6 @@ input #id_tags {
 
 }
 
-
 .desktop-searchbar {
     display: none;
 }
@@ -177,7 +191,6 @@ input #id_tags {
 /* ---------------------------------------------------------------------- */
 /* the tags */
 /* ---------------------------------------------------------------------- */
-
 .tag-container:not(:last-child) {
     display: inline-block;
     padding-right: 1rem;
@@ -205,6 +218,11 @@ input #id_tags {
 
     .mobile-searchbar {
         display: none;
+    }
+
+
+    .searchbar-section {
+        padding-top: 3.4rem !important;
     }
 }
 
@@ -259,4 +277,9 @@ input #id_tags {
 
 .tagify__input {
     /* background-color: #e79ddd; */
+}
+
+.title-link * {
+    color: var(--link-color) !important;
+
 }
