--- a/templates/includes/toast/success.html
+++ b/templates/includes/toast/success.html
@@ -1,6 +1,6 @@
 {# the toast #}
 <div class="toast-container">
-    <article class="toast message is-success">
+    <article class="toast message is-success card">
         <div class="message-header">
             <p>Success</p>
             <button class="delete" aria-label="delete"></button>
