--- a/profile_app/templates/profile_app/edit_profile.html
+++ b/profile_app/templates/profile_app/edit_profile.html
@@ -7,10 +7,23 @@
 {% block content %}
 <section class="section">
     <h2 class="subtitle is-2">Edit profile</h2>
-    <form action="" method="POST">
+
+
+    <div class="pb-6">
+
+        <figure class="image  is-128x128">
+            <img class="is-rounded" src="{{ user.profile.image.url }}" height="200" alt="">
+        </figure>
+    </div>
+
+
+    <form action="" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form|crispy }}
-        <button type="submit" class="button is-success mt-2">Update</button>
+        <fieldset class="form-group">
+            {{ user_form|crispy }}
+            {{ profile_form|crispy }}
+            <button type="submit" class="button is-success mt-2">Update</button>
+        </fieldset>
     </form>
 
 </section>
