--- a/templates/allauth/account/email_confirm.html
+++ b/templates/allauth/account/email_confirm.html
@@ -21,7 +21,7 @@
 
     <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
         {% csrf_token %}
-        <button class="button is-success" type="submit">{% trans 'Confirm' %}</button>
+        <button class="button is-success mt-4" type="submit">{% trans 'Confirm' %}</button>
     </form>
 
     {% else %}
