--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -16,7 +16,7 @@
     {% if redirect_field_value %}
     <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
     {% endif %}
-    <button class="button is-success" type="submit">{% trans 'Sign Out' %}</button>
+    <button class="button is-success mt-4" type="submit">{% trans 'Sign Out' %}</button>
   </form>
 </section>
 
