--- a/templates/includes/toast/warning.html
+++ b/templates/includes/toast/warning.html
@@ -1,1 +1,12 @@
-
+{# the toast #}
+<div class="toast-container">
+    <article class="toast message is-warning card">
+        <div class="message-header">
+            <p>Warning</p>
+            <button class="delete" aria-label="delete"></button>
+        </div>
+        <div class="message-body">
+            <p class="">{{ message }}</p>
+        </div>
+    </article>
+</div>
